[package]
name = "webp-dev"
version = "0.4.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["webp", "compression", "vp8", "webm", "image"]
description = "Rust bindings to libwebp (plus related) and some other miscellaneous stuff."
license = "MIT"
homepage = "https://github.com/imager-io/webp-dev-rs"
repository = "https://github.com/imager-io/webp-dev-rs"
readme = "README.md"

[features]
default = []
buildtype-docs-only = []

[dependencies]
libc = "0.2"
image = "0.23"

[build-dependencies]
tar = "0.4"
flate2 = "1.0"
bindgen = "0.55"
cc = "1.0"
